feat: update input date and name and the filter component and created date pipe and name filter pipe

--- a/src/app/custom-table/custom-table.component.html
+++ b/src/app/custom-table/custom-table.component.html
@@ -1,6 +1,6 @@
-<ng-container *ngIf="dataList.length == 0">
+<!-- <ng-container *ngIf="dataList != null && dataList.length == 0">
     <mat-icon class="add-note" title="click to add Items" (click)="clickedAddItem($event)">note_add</mat-icon>
-</ng-container>
+</ng-container> -->
 <div class="tableClass">
 
     <table mat-table [dataSource]="dataList" class="mat-elevation-z8" *ngIf="dataList.length > 0">
