--- a/src/app/Auth-process/login/login.component.html
+++ b/src/app/Auth-process/login/login.component.html
@@ -1,1 +1,18 @@
-<p>login works!</p>
+<div class="login-container">
+    <div class="login-header">
+        <h2>Login</h2>
+    </div>
+    <div class="login-form">
+        <div class="form-group">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" placeholder="Enter your username">
+        </div>
+        <div class="form-group">
+            <label for="password">Password:</label>
+            <input type="password" id="password" name="password" placeholder="Enter your password">
+        </div>
+        <div class="form-group">
+            <button type="submit">Login</button>
+        </div>
+    </div>
+</div>
